--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@headlessui/react": "^1.7.18",
