--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@fullcalendar/core": "^6.1.10",
     "@fullcalendar/daygrid": "^6.1.10",
     "@fullcalendar/react": "^6.1.10",
+    "@reduxjs/toolkit": "^2.0.1",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.4.0",
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
@@ -23,7 +26,8 @@
     "react-calendar": "^4.8.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
-    "react-loader-spinner": "^6.1.6"
+    "react-loader-spinner": "^6.1.6",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@headlessui/react": "^1.7.18",
